同步之前没有更改的代码